code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agent_run_grouped_plain_tool_name.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+



 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令


 › Kick off QA bot regression run

   +- qa-bot
   |
   |  Run targeted regression suite
   |
   |  代理
   |    • claude  running  (Xs)
   |
   |  Actions
   |   MM:SS  已启动代理运行：qa-bot
   |
   +- [Ctrl+A] Expand · [Esc] Stop

 +----------------------------- ✶ 生成回复... -----------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
