code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agents_terminal_overlay_full_details.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "&output"
---
 +--------------------------------------------------------------------------------------------+
 |                Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui               |
 +--------------------------------------------------------------------------------------------+
 + 代理 - Ctrl+A 关闭-------------------------------------------------------------------------+
 | 筛选   1 全部 - 2 运行中 - 3 失败 - 4 已完成 - 5 审查                     排序：( 最近 ▼ ) |
 | +----------------------++----------------------------------------------------------------+ |
 | |Docs Sweep            || Docs Sweep / CLAUDE-3-Opus                                     | |
 | |› CLAUDE-3-Opus ✔     || 状态： ✔ 已完成   模型： CLAUDE-3-Opus   ID： #docs-sw   批次：| |
 | |  GPT-4o ✖            ||Batch batchdoc                                                  | |
 | |                      ||                                                                | |
 | |                      ||+ Highlights (h) ▼ --------------------------------------------+| |
 | |                      |||   • Final: ### Highlights - New Auto Drive controls - Faster  | |
 | |                      |||       release approvals                                       | |
 | |                      ||+---------------------------------------------------------------| |
 | |                      ||                                                                | |
 | |                      || Context                                                        | |
 | |                      ||   Focus on October 2025 product changes                        | |
 | |                      ||                                                                | |
 | |                      ||+ Action Log (a) ▼ - 5 entries --------------------------------+| |
 | |                      |||   状态                                                        | |
 | |                      |||   MM:SS  状态：运行中                                         | |
 | |                      |||   进度                                                        | |
 | |                      |||   MM:SS  Collecting release notes                             | |
 | |                      |||          Reviewing eng updates                                | |
 | |                      |||   状态                                                        | |
 | |                      |||   MM:SS  状态：已完成                                         | |
 | +----------------------++----------------------------------------------------------------+ |
 |     [↑/↓/←/→] 导航   [1-5] 筛选   [S] 排序   [H/A] 切换详情   [X] 停止   [Ctrl+A] 退出     |
 +--------------------------------------------------------------------------------------------+
