code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_action_transitions.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > Comparing diffs against last run.                    ✶ 思考中 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > Ready: run cargo test --workspace                    ✶ 运行中 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > waiting for code review...                         ✶ 等待审查 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > Queued new command for execution.                    ✶ 思考中 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
