code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_intro_animation_during_settings_toggle.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > Mapping strategy...                                    ✶ 运行中 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > Mapping strategy...                                    ✶ 运行中 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+

 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令



  自动运行 > Coordinator is thinking...                           ✶ 思考中 (Xs)
 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
