code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__browser_session_grouped_desired_layout.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+



 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令


 › Open docs and find login button

   +- Browser (headless): example.com
   |
   |   Actions
   |    MM:SS  Opened    https://example.com/docs
   |    MM:SS  Clicked   Sign in button
   |    MM:SS  Scrolled  dy=640
   |    MM:SS  Typed     docs search
   |
   |   Console: cdp warning: Refused to load script from cdn.example.com
   |
   +- [Ctrl+B] View · [Esc] Stop

 +----------------------------- ✶ 浏览中... -----------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
